fixed minor issue with controls spacing

--- a/app.css
+++ b/app.css
@@ -87,7 +87,7 @@ html {
   border-radius: 10px;
   height: 160px;
   width: 175px;
-  margin-left: 28%;
+  margin-left: 0px;
   /*margin-top: 20px;*/
   padding-left: 65px;
   background-color: #3FA0B7;
